[build-system]
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See link below for available options
# https://github.com/pypa/setuptools_scm/#configuration-parameters

write_to = "pytorch_pip_shim/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-timestamp"

[tool.isort]
# See link below for available options
# https://timothycrosley.github.io/isort/docs/configuration/options/

profile = "black"
line_length = 88

skip_gitignore = true
float_to_top = true
color_output = true
order_by_type = true
combine_star = true
filter_files = true

known_third_party = ["pytest"]
known_pip = ["pip"]
known_first_party = ["pytorch_pip_shim"]
known_local_folder = ["tests"]

sections= ["FUTURE", "STDLIB", "THIRDPARTY", "PIP", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
# See link below for available options
# https://github.com/psf/black#configuration-format

line-length = 88
target-version = ["py36", "py37", "py38"]
