[metadata]
name = pytorch_pip_shim
platforms = any
description = Patch pip to play ball with PyTorch
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = pytorch, installation, pip, shim, patch, utility
url = https://github.com/pmeier/pytorch-pip-shim
author = Philip Meier
author-email = github.pmeier@posteo.de
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed
project_urls =
    Source = https://github.com/pmeier/pytorch-pip-shim
    Tracker = https://github.com/pmeier/pytorch-pip-shim/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  pip >= 20.2

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    pytorch-pip-shim = pytorch_pip_shim.cli:main
